# coastal-sim-data

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.orin  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.agents/: coastal-sim-data.md
.claude/: CLAUDE.md
.github/: copilot-instructions.md
docs/source/: conf.py  fetchers.rst  index.rst  nyofs.rst
service/: run_server.py
service/coastal_data_serve/: main.py
service/coastal_data_serve/routers/: bathymetry.py  viewer.py
src/coastal_sim_data/: dispatcher.py  regridder.py
src/coastal_sim_data/fetchers/: era5.py  erddap.py  hrrr.py  hycom.py  hydrography.py  maracoos.py  necofs.py  neracoos.py  noaa.py  nyhops.py  nyofs.py  validation.py
static/: app.js  index.html  preview3d.js  styles.css
tests/integration/: test_auth.py  test_era5_fetch.py  test_erddap_fetch.py  test_ic_fetch.py
tests/scripts/: inspect_dem.py  inspect_grib.py  inspect_zarr.py
tests/unit/: test_dispatcher.py  test_hrrr_idx.py  test_hrrr_pipeline.py  test_main.py  test_nyofs.py
