[project]
name = "coastal-sim-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cdsapi>=0.7.7",
    "cfgrib>=0.9.15.1",
    "eccodes>=2.46.0",
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
    "pydap>=3.5.8",
    "pyproj>=3.7.2",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "s3fs>=2026.2.0",
    "scipy>=1.17.1",
    "uvicorn>=0.41.0",
    "xarray>=2026.2.0",
    "zarr>=3.1.5",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.4",
]
